--- a/config.toml
+++ b/config.toml
@@ -2,10 +2,10 @@
 base_url = "https://caishaodong.pages.dev"
 
 # 网站基本信息
-title = "caishaodong"
+title = "蔡少东"
 description = "分享技术文章和学习心得的个人博客"
 
-theme = "linkita"
+theme = "serene"
 
 # Whether to automatically compile all Sass files in the sass directory
 compile_sass = true
@@ -37,21 +37,74 @@ external_links_no_follow = true
 external_links_no_referrer = true
 
 [extra]
-# 网站作者信息
-author = "wssaidong"
+# 个人信息
+name = "蔡少东"
+id = "wssaidong"
+bio = "专注于技术分享与学习的开发者"
+avatar = "img/avatar.webp"
+
+# 显示选项
+display_id = true
+display_bio = true
+display_avatar = false
+
+# 最近文章
+recent = true
+recent_max = 5
+recent_more_text = "更多文章 »"
+
+# 导航菜单
+sections = [
+    { name = "博客", path = "/blog", is_external = false },
+    { name = "Dotenvx", path = "/dotenvx", is_external = false },
+    { name = "Kong", path = "/kong", is_external = false },
+    { name = "Rust", path = "/rust", is_external = false },
+    { name = "工具", path = "/tools", is_external = false },
+    { name = "关于", path = "/about", is_external = false },
+]
+blog_section_path = "/blog"
 
 # 社交链接
-social_links = [
-    { name = "GitHub", url = "https://github.com/wssaidong", icon = "github" },
-    { name = "Email", url = "mailto:caisd1@midea.com", icon = "email" },
+links = [
+    { name = "GitHub", icon = "github", url = "https://github.com/wssaidong" },
+    { name = "Email", icon = "email", url = "mailto:2449149803@qq.com" },
 ]
 
-# 网站统计
-analytics = false
+# 页脚信息
+footer_copyright = "© 2024 蔡少东"
+footer_credits = true
 
-# 评论系统（可选）
-comments = false
+# 主题设置
+force_theme = false
+blog_categorized = true
+blur_effect = false
+back_to_top = true
+toc = true
+copy = true
+display_tags = true
+truncate_summary = false
+comment = false
 
-# 主题色彩
-primary_color = "#3b82f6"
-accent_color = "#f59e0b"
+# 其他设置
+reaction = false
+outdate_alert = false
+outdate_alert_days = 120
+outdate_alert_text_before = "This article was last updated "
+outdate_alert_text_after = " days ago and may be out of date."
+
+# 导航设置
+nav_separator = "::"
+nav_wrapper_left = "{"
+nav_wrapper_right = "} ;"
+nav_wrapper_separator = ","
+
+# 404页面设置
+not_found_title = "404"
+not_found_error_text = "页面未找到"
+not_found_recover_text = "« 返回首页 »"
+
+# 导航文本
+back_link_text = "« 返回"
+
+# 日期格式
+date_format = "%Y-%m-%d"
