chore: clean up project and update author info
Main changes:
- Remove old Zola files: config.toml, sass/, scripts/, static/, templates/, themes/
- Remove test file: src/content/docs/test.md
- Update author name
- Remove duplicate H1 titles from Higress docs

File stats:
- Modified: 4 files (astro.config.mjs, package.json, about.md, index.md)
- Deleted: 15 Higress document title lines
- Deleted: 57 old Zola files (2 themes, 24 icons, 9 templates, etc.)

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "astro",
     "starlight"
   ],
-  "author": "蔡少东",
+  "author": "wilson-x",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/wssaidong/caishaodong.blog/issues"
