feat: 新增 RSS 订阅功能和 Vibe Kanban 文档
新增功能：
- RSS 订阅：添加 @astrojs/rss 依赖和 RSS 订阅端点
- 内容集合配置：新增 src/content/config.ts 定义文档数据结构
- RSS 自动发现：在站点头部添加 RSS feed 链接
- 新文档：新增 Vibe Kanban AI 编程代理编排平台文档

文件变更：
- 新增: src/content/config.ts - Astro 内容集合配置
- 新增: src/pages/rss.xml.js - RSS feed 生成端点
- 新增: src/content/docs/dev-tools/vibe-kanban/index.md - Vibe Kanban 文档
- 修改: astro.config.mjs - 添加 RSS 自动发现链接和侧边栏导航
- 修改: package.json - 添加 @astrojs/rss 依赖
- 修改: package-lock.json - 更新依赖锁定文件

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "homepage": "https://github.com/wssaidong/caishaodong.blog#readme",
   "dependencies": {
+    "@astrojs/rss": "^4.0.14",
     "@astrojs/starlight": "^0.37.1",
     "astro": "^5.16.6",
     "astro-mermaid": "^1.2.0",
