feat: 完善博客文章元数据和 RSS feed
- 为所有 34 篇文章添加 pubDate 字段
- 使用 gray-matter 直接解析 frontmatter 以绕过 Starlight schema 限制
- 优化 RSS feed 生成逻辑，按发布日期降序排列
- 文章现在包含正确的元数据：title, description, pubDate
- 提升 SEO 和 RSS 订阅体验

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@astrojs/starlight": "^0.37.1",
     "astro": "^5.16.6",
     "astro-mermaid": "^1.2.0",
+    "gray-matter": "^4.0.3",
     "mermaid": "^11.12.2"
   }
 }
