feat: 完善项目配置和开源规范
- 添加 MIT LICENSE 开源协议
- 创建 CONTRIBUTING.md 贡献指南
- 添加 .editorconfig 统一编辑器配置
- 优化 .gitignore，添加更多忽略规则
- 完善项目的开源社区建设

--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,15 @@ Thumbs.db
 
 # Claude
 .claude/
+.claude-mem/
+
+# Coverage
+coverage/
+*.lcov
+
+# Misc
+*.pid
+*.seed
+*.pid.lock
+.lock-wscript
+.pnp.*
